src/main/java/com/example/property_management/error/exception/UserAlreadyExistsException.java
package com.example.property_management.error.exception;

public class UserAlreadyExistsException extends RuntimeException  {

    public UserAlreadyExistsException(String message) {
        super(message);
    }

}
